Remove deleted status handling from v2